# club-unison

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Package.swift  README.ja.md  README.md  deny.toml
.github/workflows/: ci.yml
benches/: RESULTS.md
clients/ruby/: .gitignore  .mise.toml  Cargo.toml  Gemfile  README.md  Rakefile  unison-client.gemspec
clients/ruby/ext/unison_client/: Cargo.toml  extconf.rb
clients/ruby/ext/unison_client/src/: lib.rs
clients/ruby/lib/: unison.rb
clients/ruby/lib/unison/: version.rb
clients/ruby/test/: unison_test.rb
clients/ruby/test/e2e/: connect_test.rb
clients/swift/: Package.swift  README.md
clients/swift/Sources/UnisonClient/: Auth.swift  Channel.swift  ChannelMeta.swift  Connection.swift  Endpoint.swift  UnisonClient.swift  UnisonError.swift
clients/swift/Tests/UnisonClientTests/: AuthTests.swift  ChannelTests.swift  InMemorySupport.swift  LiveE2ETests.swift  UnisonClientTests.swift  WireByteCompatTests.swift
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
clients/typescript/bench/: RESULTS.md  channel.bench.ts  codec.bench.ts  datagram.bench.ts  index.kdl  viewer.html
clients/typescript/bench/runs/: 2026-05-16-alpha.2.kdl  2026-05-17-post-phase6.kdl
clients/typescript/examples/: vp-dashboard.ts
clients/typescript/src/: client.ts  index.ts
clients/typescript/src/channel/: auth.ts  datagram_channel.ts  frame.ts  identity.ts  types.ts  unison_channel.ts
clients/typescript/src/codec/: codec.ts  json_codec.ts  proto_codec.ts
clients/typescript/src/testing/: index.ts  mock_transport.ts  server_stub.ts
clients/typescript/src/transport/: errors.ts  trust.ts  types.ts  web_transport.ts
clients/typescript/src/wire/: packet.ts  packet_header.ts  proto.ts  protocol_message.ts
clients/typescript/tests/channel/: frame.test.ts
clients/typescript/tests/codec/: json_codec.test.ts  proto_codec.test.ts
clients/typescript/tests/integration/: auth.test.ts  beta_freeze.test.ts  codec_channel.test.ts  datagram_channel.test.ts  mock_transport.ts  server_stub.ts  teardown.test.ts  unison_channel.test.ts  webtransport_e2e.test.ts
clients/typescript/tests/transport/: errors.test.ts  trust.test.ts  trust_gate.test.ts
clients/typescript/tests/wire/: byte_compat.test.ts  codec.test.ts
crates/unison-agent/: Cargo.toml
crates/unison-agent/src/: lib.rs  tools.rs
crates/unison-cli/: Cargo.toml
crates/unison-cli/src/: call.rs  main.rs  mock.rs  ping.rs  schema_lint.rs  sniff.rs
crates/unison-mcp/: Cargo.toml  DEMO.md  README.md
crates/unison-mcp-probe/: Cargo.toml  README.md
crates/unison-mcp-probe/src/: tools.rs
crates/unison-mcp/examples/: unison.json
crates/unison-mcp/src/: bridge.rs  config.rs  lib.rs  main.rs  mapping.rs  tools.rs
crates/unison-mcp/tests/: test_integ_synthesis.rs
crates/unison-protocol/: Cargo.toml  build.rs
crates/unison-protocol/benches/: datagram.rs  datagram_channel.rs  datagram_channel_max_throughput.rs  datagram_channel_sustained.rs  ping_pong.rs  quic_performance.rs  throughput.rs
crates/unison-protocol/examples/: builder_api.rs  hailing_demo_server.rs  webtransport_echo_server.rs
crates/unison-protocol/src/: lib.rs  prelude.rs
crates/unison-protocol/tests/: cgp_integration_test.rs  quic_integration_test.rs  simple_quic_test.rs  test_alpn_enforcement.rs  test_codegen_channel.rs  test_codegen_typescript_channel.rs  test_creo_sync.rs  test_integ_auth.rs  test_integ_discovery.rs  test_integ_dynamic.rs  test_integ_error_paths.rs  test_integ_handler_dispatch.rs  test_integ_identity_flow.rs  test_integ_protocol_message.rs  test_kdl.rs  test_medium_client_events.rs  test_medium_datagram_echo.rs  test_medium_ip_dualstack.rs  test_medium_mesh_trust.rs  test_medium_spawn_cert.rs  test_server_initiated_stream.rs  test_wire_byte_compat.rs
design/: README.md  architecture.md  connection-auth.md  datagram-channel.md  quic-runtime.md  server-initiated-stream.md  swift-client-api.md  typescript-client-api.md  wire-format.md
docs/: kdl-to-json-schema.md
docs/review/: 2026-05-29-post-1.0-ultra-review.md
dogfood/: vp-2026-05-26.md
guides/: integration-guide.md  typescript-sdk.md
schemas/: auth.kdl  discovery.kdl
spec/01-core-concept/: SPEC.md
spec/02-unified-channel/: SPEC.md
spec/04-discovery/: SPEC.md
(+39 files in other folders)
