[package]
name = "unison-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "MCP (Model Context Protocol) bridge for Unison Protocol — discovers server protocol at runtime and synthesizes typed tools for AI agents."
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "unison_mcp"
path = "src/lib.rs"

[[bin]]
name = "unison-mcp"
path = "src/main.rs"

[dependencies]
# MCP
rmcp.workspace = true
schemars.workspace = true

# club-unison: crates.io package、lib identifier は `unison`
club-unison = { path = "../unison-protocol" }

# Runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# CLI
clap.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
